// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/hub/SteppedNavigation More Snapshot tests with react-test-renderer, but for edge cases edge case where activeIndex not in steps index 1`] = `
<div>
  <a
    aria-current="page"
    className="SteppedNavigation__exit flex-container align-middle active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    <span
      className="SteppedNavigation__exitText"
    >
      Exit
    </span>
    <span
      className="SteppedNavigation__exitIcon"
    />
  </a>
  <div
    className="SteppedNavigation flex-container"
  >
    <div
      className="flex-child-grow flex-container flex-dir-row-reverse"
    >
      <div
        className="SteppedNavigation__buttonContainer"
      />
    </div>
    <div
      className="SteppedNavigation__circles flex-container align-center-middle"
    >
      <a
        aria-current={null}
        className={undefined}
        href="/test/1"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/2"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/3"
        onClick={[Function]}
        style={undefined}
      />
    </div>
    <div
      className="flex-child-grow"
    >
      <div
        className="SteppedNavigation__buttonContainer"
      />
    </div>
  </div>
</div>
`;

exports[`app/hub/SteppedNavigation More Snapshot tests with react-test-renderer, but for edge cases edge case where exitText is not set 1`] = `
<div>
  <a
    aria-current="page"
    className="SteppedNavigation__exit flex-container align-middle active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    
    <span
      className="SteppedNavigation__exitIcon"
    />
  </a>
  <div
    className="SteppedNavigation flex-container"
  >
    <div
      className="flex-child-grow flex-container flex-dir-row-reverse"
    >
      <div
        className="SteppedNavigation__buttonContainer"
      />
    </div>
    <div
      className="SteppedNavigation__circles flex-container align-center-middle"
    >
      <a
        className="active"
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/2"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/3"
        onClick={[Function]}
        style={undefined}
      />
    </div>
    <div
      className="flex-child-grow"
    >
      <div
        className="SteppedNavigation__buttonContainer flex-container align-center-middle"
      >
        <a
          aria-current={null}
          className="button primary"
          href="/test/2"
          onClick={[Function]}
          style={undefined}
        >
          Next
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/hub/SteppedNavigation More Snapshot tests with react-test-renderer, but for edge cases edge case where steps is empty array 1`] = `
<div
  className="SteppedNavigation__isNull"
/>
`;

exports[`app/hub/SteppedNavigation Snapshot tests with react-test-renderer stepped navigation is rendered correctly on first step 1`] = `
<div>
  <a
    aria-current="page"
    className="SteppedNavigation__exit flex-container align-middle active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    <span
      className="SteppedNavigation__exitText"
    >
      Exit
    </span>
    <span
      className="SteppedNavigation__exitIcon"
    />
  </a>
  <div
    className="SteppedNavigation flex-container"
  >
    <div
      className="flex-child-grow flex-container flex-dir-row-reverse"
    >
      <div
        className="SteppedNavigation__buttonContainer"
      />
    </div>
    <div
      className="SteppedNavigation__circles flex-container align-center-middle"
    >
      <a
        className="active"
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/2"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/3"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/4"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/5"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/6"
        onClick={[Function]}
        style={undefined}
      />
    </div>
    <div
      className="flex-child-grow"
    >
      <div
        className="SteppedNavigation__buttonContainer flex-container align-center-middle"
      >
        <a
          aria-current={null}
          className="button primary"
          href="/test/2"
          onClick={[Function]}
          style={undefined}
        >
          Next
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/hub/SteppedNavigation Snapshot tests with react-test-renderer stepped navigation is rendered correctly on last step 1`] = `
<div>
  <div />
  <div
    className="SteppedNavigation flex-container"
  >
    <div
      className="flex-child-grow flex-container flex-dir-row-reverse"
    >
      <div
        className="SteppedNavigation__buttonContainer flex-container align-center-middle"
      >
        <a
          aria-current={null}
          className="button hollow primary"
          href="/test/2"
          onClick={[Function]}
          style={undefined}
        >
          Previous
        </a>
      </div>
    </div>
    <div
      className="SteppedNavigation__circles flex-container align-center-middle"
    >
      <a
        aria-current={null}
        className={undefined}
        href="/test/1"
        onClick={[Function]}
        style={undefined}
      />
      <a
        aria-current={null}
        className={undefined}
        href="/test/2"
        onClick={[Function]}
        style={undefined}
      />
      <a
        className="active"
      />
    </div>
    <div
      className="flex-child-grow"
    >
      <div
        className="SteppedNavigation__buttonContainer flex-container align-center-middle"
      >
        <a
          aria-current="page"
          className="button primary active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/hub/SteppedNavigation Snapshot tests with react-test-renderer stepped navigation is rendered correctly on second step 1`] = `
<div>
  <a
    aria-current={null}
    className="SteppedNavigation__exit flex-container align-middle"
    href="/more-examples"
    onClick={[Function]}
    style={undefined}
  >
    <span
      className="SteppedNavigation__exitText"
    >
      Leave
    </span>
    <span
      className="SteppedNavigation__exitIcon"
    />
  </a>
  <div
    className="SteppedNavigation flex-container"
  >
    <div
      className="flex-child-grow flex-container flex-dir-row-reverse"
    >
      <div
        className="SteppedNavigation__buttonContainer flex-container align-center-middle"
      >
        <a
          aria-current={null}
          className="button hollow primary"
          href="/example/1"
          onClick={[Function]}
          style={undefined}
        >
          Previous
        </a>
      </div>
    </div>
    <div
      className="SteppedNavigation__circles flex-container align-center-middle"
    >
      <a
        aria-current={null}
        className={undefined}
        href="/example/1"
        onClick={[Function]}
        style={undefined}
      />
      <a
        className="active"
      />
      <a
        aria-current={null}
        className={undefined}
        href="/example/3"
        onClick={[Function]}
        style={undefined}
      />
    </div>
    <div
      className="flex-child-grow"
    >
      <div
        className="SteppedNavigation__buttonContainer flex-container align-center-middle"
      >
        <a
          aria-current={null}
          className="button primary"
          href="/example/3"
          onClick={[Function]}
          style={undefined}
        >
          Next
        </a>
      </div>
    </div>
  </div>
</div>
`;
